--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1"
     />
+    <script src="https://kit.fontawesome.com/d5e121d078.js" crossorigin="anonymous"></script>
     <meta name="theme-color" content="#000000" />
     <!--
       manifest.json provides metadata used when your web app is added to the
